2006-12-12  Thomas Thurman  <thomas@thurman.org.uk>

        * src/compositor.c (do_effect): Sanity check to avoid dereferencing
	a null pointer.

2006-12-10  Thomas Thurman  <thomas@thurman.org.uk>

        * configure.in: post-release bump to 2.17.5.

2006-12-10  Thomas Thurman  <thomas@thurman.org.uk>

        * NEWS: 2.17.3 release.

2006-12-05  Christof Krüger  <mail@pop2wap.net>

        * src/window.c (update_move): Fix flickering about when dragging
	maximised windows between xineramas. Closes #358715.

2006-12-03  Federico Mena Quintero  <federico@novell.com>

	Fix http://bugzilla.gnome.org/show_bug.cgi?id=381127:

	* src/window.c (idle_calc_showing): Grab the server while the
	windows are being shuffled.  First show the windows to be shown, 
	and then hide the windows to be hidden, in order to minimize
	the number of expose events.

2006-11-15  Bruno Boaventura  <brunoboaventura@gmail.com>
2006-11-15  Björn Lindqvist   <bjourne@gmail.com>

	* src/menu.c: added MetaMenuItemType enum; added it
	to MenuItem; added values of this type to menuitems
	array.
	* src/menu.c (menu_item_new): rewrite to take a MenuItem
	instead of a set of parameters describing the menu item.
	* src/menu.c (meta_window_menu_new): use proper checkboxes
	or radio buttons on the window menu. (#343108)
	* src/window.c (meta_window_show_menu): unstick and stick
	are always shown.

2006-11-06  Thomas Thurman  <thomas@thurman.org.uk>

	* configure.in: post-release bump to 2.17.3.

2006-11-06  Thomas Thurman  <thomas@thurman.org.uk>

	* configure.in: pre-release bump to 2.17.2.
        * NEWS: 2.17.2 release.

2006-11-05  Priit Laes  <amd@store20.com>

	* src/main.c, src/ui.c: remove deprecated gtk stuff.

2006-11-05  Bruno Boaventura  <brunoboaventura@gmail.com>

	* src/theme.c, src/testgradient.c: remove deprecated gtk stuff.

2006-11-05  Kjartan Maraas  <kmaraas@gnome.org>

        * src/ui.c: use g_strdup to allocate a string, not strdup. Fixes
        #363354.